[FIX] column alignment in layout view

--- a/f1_new_samuele_mule/public/css/style.css
+++ b/f1_new_samuele_mule/public/css/style.css
@@ -15,7 +15,16 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #978e8e;
 }
+
+.site-main {
+  flex: 1;
+  max-width: 1000px;
+  margin: 20px;
+  padding: 20px;  
+}
+
 /*----------------------------------------SEZIONE HEADER-----------------------------*/
 
 .site-header {
@@ -70,23 +79,7 @@ body {
 
 /*----------------------------------------SEZIONE HOME-----------------------------*/
 
-.site-main {
-  flex: 1;
-  max-width: 1000px;
-  margin: 20px auto;
-  padding: 0 20px;
-}
 
-.carousel h2 {
-  margin-bottom: 12px;
-}
-
-.carousel-placeholder {
-  background: #e0e0e0;
-  padding: 40px;
-  text-align: center;
-  border-radius: 4px;
-}
 
 /*----------------------------------------SEZIONE FOOTER-----------------------------*/
 
@@ -123,9 +116,8 @@ body {
   display: flex;
   width: 75vw;
   height: 500px;
-  margin: 30px auto;
-  gap: 10px;
-  
+  margin: 60px auto;
+  gap: 10px; 
 }
 
 .main-item {
@@ -155,3 +147,6 @@ body {
   height: 100%;
   display: block;
 }
+
+/*----------------------------------------SEZIONE AUTO-----------------------------*/
+
